Bug 557726.  Allow passing a pseudo-element argument to getCSSStyleRules in inspector utils.  r=bzbarsky