layout/inspector/src/inDOMUtils.cpp
@@ -53,11 +53,11 @@
 #include "nsIDOMWindowInternal.h"
 #include "nsXBLBinding.h"
 #include "nsXBLPrototypeBinding.h"
-#include "nsIDOMElement.h"
 #include "nsIMutableArray.h"
 #include "nsBindingManager.h"
 #include "nsComputedDOMStyle.h"
 #include "nsEventStateManager.h"
+#include "nsIAtom.h"
 
 ///////////////////////////////////////////////////////////////////////////////
 
@@ -151,16 +151,22 @@ inDOMUtils::GetParentForNode(nsIDOMNode* aNode,
 
 NS_IMETHODIMP
 inDOMUtils::GetCSSStyleRules(nsIDOMElement *aElement,
+                             const nsAString& aPseudo,
                              nsISupportsArray **_retval)
 {
   NS_ENSURE_ARG_POINTER(aElement);
 
   *_retval = nsnull;
 
+  nsCOMPtr<nsIAtom> pseudoElt;
+  if (!aPseudo.IsEmpty()) {
+    pseudoElt = do_GetAtom(aPseudo);
+  }
+
   nsRuleNode* ruleNode = nsnull;
   nsCOMPtr<nsIContent> content = do_QueryInterface(aElement);
   nsRefPtr<nsStyleContext> styleContext;
-  GetRuleNodeForContent(content, getter_AddRefs(styleContext), &ruleNode);
+  GetRuleNodeForContent(content, pseudoElt, getter_AddRefs(styleContext), &ruleNode);
   if (!ruleNode) {
     // This can fail for content nodes that are not in the document or
     // if the document they're in doesn't have a presshell.  Bail out.
@@ -270,6 +276,7 @@ inDOMUtils::GetContentState(nsIDOMElement *aElement, nsEventStates::InternalType
 
 /* static */ nsresult
 inDOMUtils::GetRuleNodeForContent(nsIContent* aContent,
+                                  nsIAtom* aPseudo,
                                   nsStyleContext** aStyleContext,
                                   nsRuleNode** aRuleNode)
 {
@@ -293,9 +300,10 @@ inDOMUtils::GetRuleNodeForContent(nsIContent* aContent,
   NS_ENSURE_TRUE(safe, NS_ERROR_OUT_OF_MEMORY);
 
   nsRefPtr<nsStyleContext> sContext =
-    nsComputedDOMStyle::GetStyleContextForElement(aContent->AsElement(),
-						  nsnull, presShell);
-  *aRuleNode = sContext->GetRuleNode();
-  sContext.forget(aStyleContext);
+    nsComputedDOMStyle::GetStyleContextForElement(aContent->AsElement(), aPseudo, presShell);
+  if (sContext) {
+    *aRuleNode = sContext->GetRuleNode();
+    sContext.forget(aStyleContext);
+  }
   return NS_OK;
 }
